# random-quote-generator

./: pyproject.toml
.github/workflows/: branch.yaml
random_quote_generator/: get_quote.py
tests/: test_get_quote.py
